# he-walks-unseen

./: .editorconfig  .gitignore  AGENTS.md  BUGLOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  ENGINE_DESIGN.md  GAME_DEV_REVIEW.md  LICENSE  PROGRESS.md  README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json
assets/: gameTitle.txt  goblin_combat.txt  goblin_shaman.txt  no_signal.txt  placeholder_npc.txt  player_combat.txt  player_default.txt  player_hurt.txt  player_idle.txt  player_interact.txt  player_inventory.txt  player_log.txt
data/: aiStates.json  animations.json  attributes.json  combatActions.json  effects.json  enemies.json  entities.json  environmentThemes.json  equipmentSlots.json  items.json  lootTables.json  maps.json  messageTypes.json  parcels.json  prefabs.json  profiles.json  skills.json  statusEffects.json  themes.json  world.json
docs/design/: CORE_DATA.md  GAME_STATE.md  MATH_MODEL.md  OVERALL.md  RENDERING.md
docs/implementation/: PHASE_02_CORE_DATA.md  PHASE_03_GAME_STATE.md  PHASE_04.5_CLEAN_UP.md  PHASE_04_RENDERING.md  PHASE_05_LIGHT_CONE.md  PHASE_06_DATA_LOADING.md  PLAN.md
docs/review/: PHASE_02_CORE_MODELS_REVIEW.md  PHASE_03_5_ISOMETRIC_REVIEW.md  PHASE_03_OBJECTS_REVIEW.md  PHASE_07_PARADOX_REVIEW.md  PHASE_09_UI_UPGRADE_01_REVIEW.md  PHASE_12_POST_COMPLETION_REVIEW.md
docs/web-design/: AGENTS.md  CLAUDE.md  CORE_DATA.md  ENEMY_LOGIC_V1.md  (+17 more)
frontend/: README.md  index.html  package-lock.json  package.json
scripts/: validateData.ts
src/: lib.rs  main.rs  main.tsx  themes.ts
tests/: detection_integration.rs
(+302 files in other folders)
