[package]
name = "he-walks-unseen"
version = "0.1.0"
edition = "2026"
authors = ["He Walks Unseen Team"]
description = "A terminal-based, turn-based puzzle stealth game where time is a spatial dimension"
license = "MIT"
repository = "https://github.com/white-stain/he-walks-unseen"
keywords = ["game", "puzzle", "terminal", "tui", "stealth"]
categories = ["games"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# Utilities
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }

# Async (for future hot-reload)
# tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "he-walks-unseen"
path = "src/main.rs"

[lib]
name = "he_walks_unseen"
path = "src/lib.rs"
